// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders CircularDeterminate after 1000ms 1`] = `
<div
  className=""
>
  <div
    aria-valuenow={49}
    className="MuiCircularProgress-root MuiCircularProgress-colorPrimary"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "transform": "rotate(262.710deg)",
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={
          Object {
            "strokeDasharray": "126.920",
            "strokeDashoffset": "33.012px",
          }
        }
      />
    </svg>
  </div>
</div>
`;

exports[`renders CircularDeterminate first 1`] = `
<div
  className=""
>
  <div
    aria-valuenow={0}
    className="MuiCircularProgress-root MuiCircularProgress-colorPrimary"
    role="progressbar"
    style={
      Object {
        "height": 40,
        "transform": "rotate(0.000deg)",
        "width": 40,
      }
    }
  >
    <svg
      className="MuiCircularProgress-svg"
      viewBox="22 22 44 44"
    >
      <circle
        className="MuiCircularProgress-circle"
        cx={44}
        cy={44}
        fill="none"
        r={20.2}
        strokeWidth={3.6}
        style={
          Object {
            "strokeDasharray": "126.920",
            "strokeDashoffset": "126.920px",
          }
        }
      />
    </svg>
  </div>
</div>
`;
